--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,8 +4,8 @@ logging.level.org.hibernate.SQL=debug
 
 ## Spring DATASOURCE (Don't forget do change "spring" to the name of your database)
 spring.datasource.url = jdbc:mysql://localhost:3306/spring?useTimezone=true&serverTimezone=UTC
-spring.datasource.username = root
-spring.datasource.password = 6321
+spring.datasource.username = user
+spring.datasource.password = pass123
 
 ## Hibernate Properties
 # The SQL dialect makes Hibernate generate better SQL for the chosen database
@@ -16,4 +16,4 @@ spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL8Dialect
 # - create-drop: Drop database if exists and create new one from classes
 # - validate: Validates if class mapping matches database
 # - update: Tries to alter the database to match class mapping
-spring.jpa.hibernate.ddl-auto = update
+spring.jpa.hibernate.ddl-auto = validate
